--- a/nr592/schedule_spring2019.Rmd
+++ b/nr592/schedule_spring2019.Rmd
@@ -9,7 +9,7 @@ author: |
 date: |
   | Spring 2019
   | &nbsp;
-  | Last Updated: 2019-04-04
+  | Last Updated: 2019-04-08
   | &nbsp;
 output:
   html_document:
@@ -178,8 +178,8 @@ output:
 
 ### Lectures
 
-* Tuesday, April 9: **Lecture 05** (pdf / Rmd)
-
+* Tuesday, April 9: **[Lecture 05](./lectures/lecture05.html)** ([pdf](./lectures/lecture05.pdf) / [Rmd](./lectures/lecture05.Rmd))  
+    * [Egg data](https://science.sciencemag.org/content/suppl/2017/06/21/356.6344.1249.DC1)  
 * Thursday, April 11: **Lecture 06** (pdf / Rmd)
 
 ### Homework
@@ -207,6 +207,8 @@ output:
 * Healy, K. Data visualization: A practical introduction. Available: https://socviz.co/
 
 * Wilke, C. O. Fundamentals of data visualization. Available: https://serialmentor.com/dataviz/
+
+* Rougier, N. P., et al. (2014). Ten simple rules for better figures. PLOS Computational Biology, 10(9), e1003833. doi: [10.1371/journal.pcbi.1003833](https://doi.org/10.1371/journal.pcbi.1003833)
 
 * BBC Open Source. BBC visual and data journalism cookbook for R graphics. Available: https://bbc.github.io/rcookbook/
 
